@@ -500,6 +500,7 @@ AC_SUBST(darshan_lib_path)
 AC_SUBST(darshan_share_path)
 AC_SUBST(LDFLAGS)
 AC_SUBST(__DARSHAN_LOG_PATH)
+AC_SUBST(__DARSHAN_LOG_ENV)
 AC_SUBST(DISABLE_STATIC_LIB)
 AC_SUBST(DISABLE_LDPRELOAD)
 AC_SUBST(ENABLE_MMAP_LOGS)
