@@ -3,6 +3,8 @@
 DARSHAN_LIB_PATH="@darshan_lib_path@"
 DARSHAN_SHARE_PATH="@darshan_share_path@"
 DARSHAN_LD_FLAGS="@LDFLAGS@"
+DARSHAN_LOG_PATH="@__DARSHAN_LOG_PATH@"
+DARSHAN_LOG_ENV="@__DARSHAN_LOG_ENV@"
 
 # NOTE:
 # - we deliberately list libdarshan twice in the link command when
@@ -20,8 +22,27 @@ POST_LD_FLAGS="-L$DARSHAN_LIB_PATH -ldarshan -lz -lrt -lpthread"
 #   order.  We also set no-as-needed for linkers that may not identify
 DYN_LD_FLAGS="-L$DARSHAN_LIB_PATH $DARSHAN_LD_FLAGS -Wl,-rpath=$DARSHAN_LIB_PATH -Wl,-no-as-needed -ldarshan"
 
+# NOTE:
+# - construct complete list of log path options, separated by commas.
+#   LOG_ENV takes precedent over LOG_PATH, but both could be specified.  The
+#   LOG_ENV may already be a comma saparated list, but we insert '$'
+#   characters to denote that these are environment variables.
+if [ "$DARSHAN_LOG_ENV" ]; then
+    DARSHAN_LOG_ENV=`echo $DARSHAN_LOG_ENV | sed -e 's/^/\$/g'`
+    DARSHAN_LOG_ENV=`echo $DARSHAN_LOG_ENV | sed -e 's/,/,\$/g'`
+fi
+
+# figure out if we need a comma separator to construct env and path list
+if [ "$DARSHAN_LOG_ENV" -a "$DARSHAN_LOG_PATH" ]; then
+    DARSHAN_LOG_ALL="$DARSHAN_LOG_ENV,$DARSHAN_LOG_PATH"
+elif [ "$DARSHAN_LOG_ENV" ]; then
+    DARSHAN_LOG_ALL=$DARSHAN_LOG_ENV
+else
+    DARSHAN_LOG_ALL=$DARSHAN_LOG_PATH
+fi
+
 usage="\
-Usage: darshan-config [--pre-ld-flags] [--post-ld-flags] [--dyn-ld-flags]"
+Usage: darshan-config [--pre-ld-flags] [--post-ld-flags] [--dyn-ld-flags] [--log-path]"
 
 if test $# -eq 0; then
       echo "${usage}" 1>&2
@@ -43,6 +64,9 @@ while test $# -gt 0; do
       ;;
     --dyn-ld-flags)
       echo $DYN_LD_FLAGS
+      ;;
+    --log-path)
+      echo $DARSHAN_LOG_ALL
       ;;
     *)
       echo "${usage}" 1>&2
